[package]
name = "cheery-back"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = [
    "http2",
    "headers",
    "tokio",
    "multipart",
] }
futures = "0.3"
tokio = { version = "1.34", features = ["full", "time"] }
tokio-stream = "0.1"
tower = "0.4"
tower-http = { version = "0.4", features = [
    "cors",
    "trace",
    "limit",
    "request-id",
    "timeout",
    "compression-gzip",
    "fs",
] }
cfg-if = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
time = { version = "0.3", features = ["serde", "serde-human-readable"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rs-snowflake = "0.6"
uuid = { version = "1.5", features = ["v4", "fast-rng", "macro-diagnostics"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "time"] }
redis = { version = "0.23", features = ["tokio-rustls-comp", "cluster"] }
bb8-redis = "0.13"
tokio-zookeeper = "0.2"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1
strip = "debuginfo"
